[workspace]
resolver = "2"

members = ["smart-wallet", "smart-wallet-interface", "smart-wallet-factory", "example-contract", "sample-policy"]

[workspace.dependencies]
soroban-sdk = { version = "21.7.2" }
serde = { version = "1", default-features = false }
serde-json-core = { version = "0.6.0", default-features = false }
stellar-xdr = { version = "21.2.0", default-features = false }
sha256 = { version = "1.5.0" }
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.8.5" }
base64 = "0.22.1"
stellar-strkey = { version = "0.0.11" }
smart-wallet = { path = "smart-wallet" }
smart-wallet-interface = { path = "smart-wallet-interface" }
smart-wallet-factory = { path = "smart-wallet-factory" }
example-contract = { path = "example-contract" }
sample-policy = { path = "sample-policy" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
