[workspace]
resolver = "2"

members = ["smart-wallet", "smart-wallet-interface", "example-contract", "sample-policy"]

[workspace.dependencies]
soroban-sdk = "23.0"
serde = { version = "1.0", default-features = false }
serde-json-core = { version = "0.6", default-features = false }
sha256 = { version = "1.6" }
ed25519-dalek = { version = "2.2" }
base64 = "0.22"
stellar-strkey = { version = "0.0.13" }
smart-wallet = { path = "smart-wallet" }
smart-wallet-interface = { path = "smart-wallet-interface" }
example-contract = { path = "example-contract" }
sample-policy = { path = "sample-policy" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
