[package]
name = "smart-wallets-next-dima"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zephyr-sdk = "0.2.4"
stellar-strkey = "0.0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smart-wallet-interface = { path = "../contracts/smart-wallet-interface" }
hex = "0.4.3"
base64 = "0.22.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
