[package]
name = "webauthn-secp256r1"
version = "0.1.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.1.0-rc.1" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5.1", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "21.1.0-rc.1", features = ["testutils"] }
stellar-xdr = { version = "21.1.0", default-features = false, features = [
    "std",
    "curr",
] }
sha256 = "1.5.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
