[package]
name = "smart-wallet"
version = "0.5.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
smart-wallet-interface = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-json-core = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-strkey = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
sha256 = { workspace = true }
sample-policy = { workspace = true, features = ["testutils"] }
example-contract = { workspace = true, features = ["testutils"] }