[package]
name = "smart-wallet"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
smart-wallet-interface = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-json-core = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-strkey = { workspace = true }
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
proptest = { workspace = true }
sample-policy = { workspace = true, features = ["testutils"] }
example-contract = { workspace = true, features = ["testutils"] }
