[package]
name = "webauthn-factory"
version = "0.4.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
# webauthn-wallet = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }