[package]
name = "webauthn-wallet"
version = "0.3.1"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-json-core = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-xdr = { workspace = true, features = ["std", "curr"] }
sha256 = { workspace = true }