[package]
name = "webauthn-wallet"
version = "0.4.1"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-json-core = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-xdr = { workspace = true, features = ["std", "curr"] }
sha256 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
stellar-strkey = { workspace = true }
sample-policy = { workspace = true }
example-contract = { workspace = true }
base64 = { workspace = true }